--- a/style.css
+++ b/style.css
@@ -22,3 +22,70 @@ nav {
     width: 100px;
     height: 100px;
 }
+
+nav .logo {
+    font-size: 2rem;
+    color: #fff;
+    font-weight: 700;
+}
+
+ul {
+    text-transform: uppercase;
+    list-style: none;
+}
+
+nav ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0 35px;
+    font-size: 1.2rem;
+}
+nav a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: 700;
+}
+
+nav a:hover {
+    border-bottom: 2px solid hsl(0, 0%, 100%);
+    transition: 1s;
+}
+.content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0px 300px;
+}
+
+.content img {
+    width: 25rem;
+}
+
+.about {
+    color: #fff;
+    width: 300px;
+    height: 400px;
+    font-size: 1.2rem;
+    font-weight: 700;
+    margin-top: 200px;
+    margin-right: 50px;
+}
+
+.about h2 {
+    font-size: 2.4rem;
+}
+
+.french-fries{
+    position: absolute;
+    width: 300px;
+    height: 100px;
+    margin-top: 200px;
+    left: 0;
+    pointer-events: none;
+}
+
+.french-fries img{
+    margin-left: 100px;
+    width: 340px;
+}
